# XAI-Investment_Banking

./: .env  .gitignore  PROJECT_OVERVIEW.md  README.md  handoff.md  pyproject.toml  requirements.txt
data/: build_combined.py
data/nprocessed/risk/: risk_dataset_summary.json
diss_writing/: methodology.md  project_context.md
experiments/risk/SHAP/: plot_manifest.json  risk_shap_summary.json
experiments/risk/metrics/: validation_absolute_error_quantiles.csv  validation_metrics_table.csv
experiments/valuation/: model evaluation.md
experiments/valuation/SHAP/: plot_manifest.json  valuation_shap_summary.json
experiments/valuation/metrics/: validation_metrics_table.csv  (+1 more)
models/: prediction_model.py  prediction_test.py
src/data_fetch/: attach_news_to_tickers.py  fetch_data_raw.py  news_client.py  ticker.py
src/data_fetch/news/: news_client.py  (+2 more)
src/evaluation/: cross_validate_news_driven_mlp.py  custom_valuation.py  evaluate_final_testsets.py  evaluate_residual_testsets.py  evaluate_risk_mlp_testsets.py  evaluate_risk_testsets.py  evaluate_valuation2_testsets.py  evaluate_xgb_groupcv_testsets.py  evaluate_xgb_testsets.py  pca_report.py  plots.py  plots_risk.py
src/explainability/: __init__.py  plot_shap_risk.py  plot_shap_valuation.py  shap_risk.py  shap_valuation.py
src/features/: engineering.py
src/models/: custom_valuation.py  feature_engineering.py  news_driven_mlp_valuation.py  residual_mlp_valuation.py  valuation.py  xgb_valuation.py
src/scripts/: export_top.py  train_risk.py
xai_investment_banking.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+115 files in other folders)
